# sotis

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.agents/skills/handoff/: SKILL.md
.agents/skills/pickup/: SKILL.md
.claude/skills/committer/: SKILL.md
.claude/skills/fixissue/: SKILL.md
.claude/skills/guardrails/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/pickup/: SKILL.md
crates/sotis-cli/: Cargo.toml
crates/sotis-cli/src/: main.rs
crates/sotis-core/: Cargo.toml
crates/sotis-core/src/: config.rs  error.rs  index.rs  lib.rs  scanner.rs  search.rs  watcher.rs
crates/sotis-core/src/extract/: docx.rs  epub.rs  image.rs  mod.rs  odt.rs  pdf.rs  pdf_ocr.rs  plaintext.rs  spreadsheet.rs
crates/sotis-core/src/index/: ocr_refresh.rs  tests.rs
crates/sotis-core/src/search/: tests.rs
crates/sotis-gui/: Cargo.toml
crates/sotis-gui/src/: app.rs  filters.rs  main.rs  preview.rs
crates/sotis-gui/src/app/: folders.rs  jobs.rs  shortcuts.rs  watcher.rs
docs/: ARCHITECTURE.md  HANDOFF.md  PRIMARY_TODO.md  README.md  STYLE.md  TODO.md  WORKFLOW.md
scripts/: bundle.sh  docs-list.mjs
