[workspace]
members = [
    "crates/sotis-core",
    "crates/sotis-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/escapables/sotis"

[workspace.dependencies]
# Search
tantivy = "0.25"
nucleo-matcher = "0.3"
regex = "1"

# Text extraction
pdf-extract = "0.10"
dotext = "0.1"
epub = "2"
calamine = "0.33"
zip = { version = "3", default-features = false, features = ["deflate"] }
tesseract = "0.15"
pdfium-render = "0.8"

# File system
walkdir = "2"
notify = "7"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

# GUI
eframe = "0.33"

# Concurrency
rayon = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Allocator
mimalloc = { version = "0.1", default-features = false }
