[package]
name = "sotis-core"
version.workspace = true
edition.workspace = true

[features]
default = []
ocr = ["dep:tesseract"]

[dependencies]
tantivy = { workspace = true }
nucleo-matcher = { workspace = true }
regex = { workspace = true }
pdf-extract = { workspace = true }
dotext = { workspace = true }
epub = { workspace = true }
calamine = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tesseract = { workspace = true, optional = true }
